Removed Fixed-Top issues with Navbar. Added in correct displaying sections under nav. Added -20px margin to cover gap.

--- a/main.css
+++ b/main.css
@@ -16,7 +16,6 @@ font-family: 'Gaegu', cursive;
 
 .highlight{
   border: solid red !important;
-
 }
 
 .navbar-brand{
@@ -28,6 +27,10 @@ font-family: 'Gaegu', cursive;
   color: white;
   font-family: 'Gaegu', cursive;
 font-size: 35px;
+}
+
+.jumbotron{
+  margin-top: -20px;
 }
 
 #NRed{
